# learn-framer-university

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  README.md  TURBO_REMOTE_CACHE_SETUP.md  api.Dockerfile  api.staging.Dockerfile  backend.Dockerfile  diesel.toml  docker-compose.yml  docker-entrypoint.js  docker_entrypoint.sh  env.js  env.mjs  eslint.config.mjs  fly.api.toml  fly.backend.toml  fly.frontend.toml  fly.staging.api.toml  fly.staging.frontend.toml  frontend.Dockerfile  frontend.staging.Dockerfile  git-conventional-commits.yaml  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy.yml  pr-preview.yml  preview.yml  production.yml
.sqlx/: query-20a27b6df32720290c830b6d68feeaa40d86c0c180f270733ca81c995ae0102b.json  query-4947999b846d79a0dd7680fae5df7aae1e52322b6b0d418ae0f577b239a1757f.json  query-4a17435585ca2e1d1657590efb5566960ea0f7cf2e58db57b64a4ab285fad95a.json  query-69094b0b20be4b7519e7fa036bbdf02c018a9751e2b11100b98b9b2a79c2a5a5.json  query-74c4790ef90eb322f87294bc21e509d387a47cf094f1031ade340b7c7014c249.json  query-b629972f9ea4814e8c76c5fa3a666051acb4c670d6dad1b3292ca1ec3055daae.json  query-ef80029f5e83ff452344803921c7bdfac1e96bdc19940f7aa2422a769cc038dc.json
.storybook/: main.ts  preview.ts
app/: globals.css  layout.tsx  page.tsx
app/another-one/: page.tsx
app/components/: Icons.tsx  SignInForm.tsx  SignOutButton.tsx
app/components/Button/: Button.stories.tsx  Button.test.tsx  Button.tsx
app/lib/: api.ts  middleware.ts
app/lib/auth/: actions.ts
app/profile/: page.tsx
app/sign-in/: page.tsx
apps/admin/: README.md  index.html  package.json  postcss.config.mjs  turbo.json  vite.config.ts  wrangler.jsonc
apps/admin/src/: globals.css  main.tsx
apps/api/: .env.sample  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  turbo.json
apps/api/.sqlx/: query-028b19577ea5551037fd67267d221ab6ea31462b91017f55be024b3ec4d47444.json  query-9ee7421e23d99ee5445877e47fbfed382b73ff589eba1936b2e969f47a2515a7.json  query-c0207bdd91198b0c76a0b86b8d3f38540fa0a5b44dd15f08c6c5f202a674a241.json  query-cecbb5f31760200dc5ede0e49d12087dcef3ed7a23144814ad8560e463fea6ca.json  query-eb726b812300c60b86e03578cde0349c8793d812dae5e9869c4c1e7ddf5795ed.json
apps/api/crates/framer_university_database/: Cargo.toml  README.md
apps/api/crates/framer_university_database/src/models/: refresh_token.rs  user.rs
apps/api/migrations/: 20250420151234_initial.down.sql  20250420151714_create_users_table.down.sql  20250420151714_create_users_table.up.sql  20250420152025_create_verification_tokens_table.down.sql  20250420152031_create_refresh_tokens_table.down.sql  20250420152031_create_refresh_tokens_table.up.sql
apps/api/src/: app.rs  auth.rs  email.rs  lib.rs  openapi.rs  views.rs
apps/plugin/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  turbo.json  wrangler.jsonc
apps/plugin/src/: globals.css
apps/storybook/: README.md  eslint.config.js  package.json  tsconfig.json  turbo.json
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/stories/: button.stories.tsx
apps/web/: .dev.vars.example  README.md  eslint.config.js  next.config.ts  open-next.config.ts  package.json  playwright.config.ts  tsconfig.json  turbo.json  wrangler.jsonc
apps/web/e2e/: home.spec.ts
crates/framer_university_test_db/: Cargo.toml  README.md
crates/lfu_database/: Cargo.toml  README.md
crates/lfu_database/src/: lib.rs  schema.rs
crates/lfu_database/src/models/: account.rs  refresh_token.rs  user.rs  verification_token.rs
crates/lfu_test_database/: Cargo.toml  README.md
crates/lfu_test_database/src/: lib.rs
docker/docker-entrypoint-initdb.d/: create-databases.sql
docs/: API.md  ARCHITECTURE.md  BACKEND.md  FRONTEND.md
e2e/: home.spec.ts  page.spec.ts  profile.spec.ts
e2e/auth/: signin.spec.ts
e2e/helpers/: email.ts
e2e/setup/: auth.setup.ts
lib/: api.ts
migrations/: 20250420151234_initial.down.sql  20250420151234_initial.up.sql  20250420151714_create_users_table.down.sql  20250420151714_create_users_table.up.sql  20250420152025_create_verification_tokens_table.down.sql  20250420152025_create_verification_tokens_table.up.sql  20250420152031_create_refresh_tokens_table.down.sql  20250420152031_create_refresh_tokens_table.up.sql  20250420152413_create_accounts_table.down.sql  20250420152413_create_accounts_table.up.sql
migrations/2025-02-03-202613_auth/: down.sql  up.sql
migrations/2025-02-18-220255_migration_1/: down.sql  up.sql
migrations/2025-02-18-220304_migration_2/: down.sql  up.sql
migrations/2025-02-18-220305_migration_3/: up.sql
migrations/2025-02-18-220306_migration_4/: down.sql  up.sql
migrations/2025-02-18-220307_migration_5/: up.sql
shared/: openapi.json
shared/api/: openapi.json  v1.d.ts
src/: app.rs  auth.rs  email.rs  lib.rs  main.rs  openapi.rs  router.rs  schema.rs  sentry.rs  views.rs
src/config/: mod.rs  sentry.rs  server.rs
src/controllers/: auth.rs  health.rs  metrics.rs  mod.rs  users.rs  util.rs
src/controllers/snapshots/: learn_framer_university__controllers__auth__tests__signin_sends_email.snap
src/metrics/: macros.rs  mod.rs  service.rs
src/middleware/: auth.rs  json.rs  log_request.rs  mod.rs  path.rs
src/models/: account.rs  mod.rs  refresh_token.rs  user.rs  verification_token.rs
src/tests/: mod.rs
storybook-static/: 167.fbb8de3b.iframe.bundle.js  167.fbb8de3b.iframe.bundle.js.map  364.a1cec5ff.iframe.bundle.js  463.f8522028.iframe.bundle.js  648.f8f6afc7.iframe.bundle.js  735.8f1336ad.iframe.bundle.js  869.3c7f1df6.iframe.bundle.js  878.4b6364bd.iframe.bundle.js  878.4b6364bd.iframe.bundle.js.map  980.630d635a.iframe.bundle.js  Button-Button-stories.e9e23547.iframe.bundle.js  iframe.html  index.html  index.json  main.07bba018.iframe.bundle.js  project.json  runtime~main.c276a068.iframe.bundle.js
(+44 files in other folders)
