[package]
name = "learn-framer-university"
version = "0.0.0"
edition = "2021"
authors = ["Sakibul Islam <sakibulislam25800@gmail.com>"]
repository = "https://github.com/sakib25800/learn-framer-university"
description = "Backend of learn.framer.university"
default-run = "server"

[workspace]
members = ["crates/*"]

[package.metadata.cargo-machete]
ignored = ["log"]

[workspace.metadata.cargo-machete]
ignored = ["log"]

[workspace.lints.clippy]
too_many_arguments = "allow"

[lib]
name = "learn_framer_university"

[lints]
workspace = true

[profile.staging]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 2

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["add-extension", "fs", "catch-panic", "timeout", "compression-full", "cors"] }
http = "1.2.0"
jsonwebtoken = "9.3.0"
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
metrics = {version="0.24.1", default-features = false}
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19", features = ["env-filter", "json"]}
validator = {version = "0.20.0", features = ["derive"]}
time = {version = "0.3.37", features = ["serde"]}
config = "0.15.6"
dotenvy = "0.15.7"
anyhow = "1.0.95"
prometheus = "0.14.0"
utoipa = {version="5.3.1", features = ["chrono", "uuid"]}
utoipa-axum = "0.2.0"
derive_more = {version="2.0.1",features = ["deref"]}
sentry ={version= "0.37.0", features = ["tracing", "tower", "tower-axum-matched-path", "tower-http"] }
json-subscriber = "0.2.4"
chrono = {version = "0.4.39", features = ["serde"]}
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = "1.16.0"
axum-extra = { version = "0.10.0", features = ["erased-json", "typed-header"] }
parking_lot = "0.12.3"
serde_urlencoded = "0.7.1"
env-var = "1"
log = "0.4"
axum-test = "17.2.0"
lettre = { version = "0.11.12", default-features = false, features = ["file-transport", "smtp-transport", "hostname", "builder", "tokio1", "tokio1-native-tls"] }
rand = "0.9.0"
thiserror = "2.0.12"
regex = "1.11.1"
insta = { version = "1.42.1", features = ["glob", "json", "redactions"] }
utoipa-swagger-ui = {version="9.0.0", features = ["axum"]}
lfu_database = { path = "crates/lfu_database" }
reqwest = "0.12.12"
colored = "3.0.0"
futures-util = "0.3.31"
rustls-platform-verifier = "0.5.0"
rustls = "0.23.23"
tokio-postgres-rustls = "0.13.0"
tokio-postgres = "0.7.13"

[dev-dependencies]
bytes = "1.9.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
