[package]
name = "framer_university_test_db"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
rand = "0.9.0"
tracing = "0.1.41"
url = "2.5.4"
env-var = "1"
log = "0.4"
dotenvy = "0.15.7"
